--- a/index.hbs
+++ b/index.hbs
@@ -21,7 +21,7 @@
           <div class='icon blog'></div>
           <span>Blog</span>
         </a>
-        <a class='landing-action' href='#'>
+        <a class='landing-action' href='https://s3-us-west-2.amazonaws.com/lawluk/documents/LawrenceLukResume.pdf' target='_blank'>
           <div class='icon resume'></div>
           <span>Resume</span>
         </a>
