--- a/assets/css/landing.styl
+++ b/assets/css/landing.styl
@@ -121,7 +121,7 @@
   .landing
     align-items flex-start
     background linear-gradient(-239deg, $purple 22%, $blue 100%)
-    overflow hidden
+    overflow auto
 
     &-callout
       padding $grid
