make poynt link clickable

--- a/assets/css/landing.styl
+++ b/assets/css/landing.styl
@@ -125,15 +125,15 @@
 
     &-callout
       padding $grid
+      position absolute
+      z-index 3
 
       > h1
         font-size 48px
         line-height 1
 
       > .stripe
-        background-color white
-        height $grid*4
-        margin-top -128px
+        display none
 
       > p
         background-color transparent
