ridiculous old version

--- a/page-blog.hbs
+++ b/page-blog.hbs
@@ -14,7 +14,7 @@
             <a href={{url}}>
               <article class='blog-post'>
                 <div class='blog-post-image-wrapper'>
-                  {{image}}
+                  <img src={{image}} />
                   {{!-- <img src='{{img_url feature_image absolute="true"}}'/> --}}
                 </div>
                 <div class='blog-post-info'>
