big update for new ghost

--- a/assets/css/app.styl
+++ b/assets/css/app.styl
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,300i|Nunito+Sans:400,600i,700')
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700|Muli:600,700');
+
 @import 'reset'
 @import 'grid'
 @import 'mixins'
@@ -7,4 +8,3 @@
 @import 'landing'
 @import 'blog'
 @import 'post'
-@import 'exchange'
