--- a/assets/css/mixins.styl
+++ b/assets/css/mixins.styl
@@ -1,17 +1,19 @@
-$header-font = 'Nunito Sans', sans-serif
-$body-font = 'Montserrat', sans-serif
+$header-font = 'Muli', sans-serif
+$body-font = 'Lato', sans-serif
 
-$grid = 32px
-$unit = 8px
+$grid = 20px
+$unit = 5px
 
-$small-font-size = 12px
+$post-width = $grid*45
 
-$grey1 = #333
-$grey2 = #4C4C4C
-$grey3 = #808080
-$grey4 = #AAA
-$grey5 = #CCC
-$grey6 = #F8F8F8
+$small-font-size = 0.8rem
+$base-font-size = 1rem
+$large-font-size = 1.5rem
+
+$grey1 = #111
+$grey2 = #AAA
+$grey3 = #DDD
+$grey4 = #F8F8F8
 
 $blue = #0C94F5
 $purple = #6E3DF5
