--- a/assets/css/global.styl
+++ b/assets/css/global.styl
@@ -48,29 +48,49 @@ h6
   font-size 11px
   line-height 1.5
 
-p
-  font-size:16px;
-  line-height:1.75;
-  margin-bottom:16px;
+p, li, blockquote
+  font-size $base-font-size
+  line-height 1.75
 
+blockquote
+  border-left 2px solid $purple
+  padding-left $grid*2
 
 a
+  color $blue
   cursor pointer
   display inline-block
   transition 0.2s ease
 
   &:hover
     transform translateY(-1px)
-    filter drop-shadow(2px 4px 8px rgba(40, 40, 40, 0.45))
+    // filter drop-shadow(2px 4px 8px rgba(40, 40, 40, 0.45))
 
 hr
-  margin-top $grid
-  margin-bottom $grid
+  margin $grid 0
   border-width 0
-  border-top 1px solid #E1E1E1
+  border-top 1px solid $grey3
 
 strong
-  font-weight 500
+  font-weight 600
+
+ul
+  list-style-type circle
+  padding-left $grid
+  margin-bottom 16px
+
+ol
+  list-style-type decimal
+  padding-left $grid
+  margin-bottom 16px
+
+pre
+  background-color $grey4
+  padding $grid
+
+code
+  font-family monospace
+  white-space pre-wrap
 
 // common animations
 @keyframes fade-in
@@ -91,16 +111,6 @@ strong
 img:focus, button:focus, input:focus
   outline none
 
-.post-content ul, .blog-post-content ul
-  list-style-type circle
-  padding-left $grid
-  margin-bottom 16px
-
-.post-content ol, .blog-post-content ol
-  list-style-type decimal
-  padding-left $grid
-  margin-bottom 16px
-
 .home-icon
   background-image url('https://s3-us-west-2.amazonaws.com/lawluk/images/icons/home.svg')
   background-size contain
@@ -111,6 +121,34 @@ img:focus, button:focus, input:focus
   top $grid
   left $grid
   z-index 9
+
+nav
+  position fixed
+  top $grid
+  left $grid
+  z-index 9
+
+  figure
+    width $grid*3
+    height $grid*3
+    border-radius $grid*4
+    background-color white
+    background-size cover
+    background-image url('https://s3-us-west-2.amazonaws.com/lawluk/images/pf.jpg')
+    // box-shadow 0 2px 4px rgba(0, 0, 0, 0.4)
+    margin 0 auto $grid auto
+    position relative
+    // z-index 3
+    // animation fade-in-down 1s ease both
+
+  > a
+    color $grey1
+    display block
+    margin-bottom $grid
+    text-decoration none
+
+    &:first-of-type:hover
+      transform none
 
 .loading-wave-container
   margin-top $grid
