--- a/assets/css/landing.styl
+++ b/assets/css/landing.styl
@@ -1,4 +1,5 @@
 .landing
+  background-color $grey1
   overflow hidden
   height 100vh
   display flex
@@ -23,6 +24,27 @@
 
     > h1
       font-size 96px
+      position relative
+      z-index 5
+
+      &:before,
+      &:after
+        display block
+        content 'Lawrence Luk'
+        position absolute
+        top 0
+        left 0
+        height 100%
+        width 100%
+        opacity .8
+      &:after
+        color $blue
+        z-index -2
+        animation glitch-med .85s cubic-bezier(.25, .46, .45, .94) both infinite
+      &:before
+        color $purple
+        z-index -1
+        animation glitch-med .85s cubic-bezier(.25, .46, .45, .94) reverse both infinite
 
     > .stripe
       background-color rgba(0, 0, 0, 0.75)
@@ -36,7 +58,7 @@
       animation landing-slide-in-stripe 1.8s ease both
 
     > p
-      background-color rgba(12, 148, 245, 0.75)
+      // background-color rgba(12, 148, 245, 0.75)
       margin 0
       text-align center
       animation fade-in-left 2s ease both
@@ -51,6 +73,7 @@
       color white
       display flex
       font-size $small-font-size
+      font-weight 300
       padding $unit*2
       position fixed
       bottom 0
@@ -87,7 +110,7 @@
       animation-delay 1.2s
 
     &:hover
-      transform rotateY(12deg) rotateX(8deg) rotate(-4deg)
+      transform rotateY(12deg) rotateX(12deg) rotate(-4deg)
 
       > span
         opacity 1
@@ -112,7 +135,6 @@
 
     > span
       display block
-      opacity 0
       margin-left $unit
       transition 0.2s ease
       text-align center
@@ -120,7 +142,7 @@
 @media (max-width: 640px)
   .landing
     align-items flex-start
-    background linear-gradient(-239deg, $purple 22%, $blue 100%)
+    // background linear-gradient(-239deg, $purple 22%, $blue 100%)
     overflow auto
 
     &-callout
@@ -147,7 +169,7 @@
         height $grid*4
         border-radius $grid*4
         background-color white
-        background-size contain
+        background-size cover
         background-image url('https://s3-us-west-2.amazonaws.com/lawluk/images/pf.jpg')
         box-shadow 0 2px 4px rgba(0, 0, 0, 0.4)
         margin 0 auto $grid auto
@@ -158,7 +180,6 @@
     &-actions
       flex-direction column
       position relative
-      top -28px
       z-index 2
 
     &-action
@@ -169,22 +190,6 @@
 
       > span
           opacity 1
-
-    &-foot
-      &-l
-        display none
-
-    &-mobile-pattern
-      background-image url('https://s3-us-west-2.amazonaws.com/lawluk/images/icons/heart.svg')
-      height 0
-      width 100%
-      position absolute
-      bottom 0
-      right 0
-      opacity 0.05
-      z-index 1
-      animation slide-up 12s ease both
-      animation-delay 1s
 
   video
     display none
