--- a/assets/css/post.styl
+++ b/assets/css/post.styl
@@ -1,38 +1,92 @@
 .post
   &-header
-    padding $grid*3 $grid
-    position fixed
-    text-align center
-    top 0
-    width 100%
+    margin $grid*4.5 auto $grid*2 auto
+    max-width $post-width
 
     small
-      color $grey4
-
-  &-body
-    width 100%
-    position absolute
-    transform translateY($grid*8)
-    z-index 2
-
-  &-card
-    background-color white
-    margin 0 auto $grid*2 auto
-    max-width $grid*28
-    padding $grid $grid*2
+      color $grey2
 
     img
-      margin-left $grid*-2
-      margin-right $grid*-2
-      max-width calc(100% + 128px)
+      margin-top $grid*2
+      width 100%
 
-    blockquote
-      border-left 2px solid $grey5
-      color $grey3
-      padding-left $unit
+  &-body
+    font-size $base-font-size
+    width 100%
+
+    ol, ul, p, blockquote, pre, figure
+      &:not(:first-child)
+        margin-top $grid
+
+    h1, h2, h3, h4, h5, h6
+      margin-top $grid
+
+  &-card
+    margin 0 auto $grid*2 auto
+    max-width $grid*45
 
   &-foot
     font-size $small-font-size
     margin-bottom $unit*2
     margin-right $unit*2
     text-align right
+
+.kg
+  &-image
+    display block
+    margin 0 auto
+    width 67%
+
+  &-width-full
+    position relative
+    width 100vw
+    left 50%
+    right 50%
+    margin-left -50vw
+    margin-right -50vw
+
+    > img
+      width 100%
+
+  &-width-wide
+    > img
+      width 100%
+
+  &-gallery-container
+    display flex
+    flex-direction column
+    margin  auto
+    max-width $post-width
+    width 100vw
+
+  &-gallery-row
+    display flex
+    flex-direction row
+    justify-content center
+
+  &-gallery-image
+    background-color $grey4
+    padding $unit*2 0 0 $unit*2
+
+    > img
+      display block
+      margin 0
+      width 100%
+      height 100%
+
+  &-gallery-row
+    &:last-of-type
+      > .kg-gallery-image
+        padding-bottom $unit*2
+
+  &-gallery-image
+    &:last-of-type
+      padding-right $unit*2
+
+
+
+figcaption
+  color $grey2
+  font-size $small-font-size
+  margin $unit*2 0 $grid 0
+  text-align center
