--- a/index.hbs
+++ b/index.hbs
@@ -1,20 +1,18 @@
 {{!< default}}
-{{!-- The tag above means - insert everything in this file into the {body} of the default.hbs template --}}
 
-{{!-- The main content area on the homepage --}}
 <main id='content' class='content' role='main'>
   <div class='landing'>
-    <video playsinline autoplay muted loop>
+{{!--     <video playsinline autoplay muted loop>
       <source src='https://s3-us-west-2.amazonaws.com/lawluk/videos/lawluk.webm' type='video/webm'>
       <source src='https://s3-us-west-2.amazonaws.com/lawluk/videos/lawluk.mp4' type='video/mp4'>
-    </video>
+    </video> --}}
     <div class='landing-callout'>
       <div class='mobile-photo'></div>
       <h1>Lawrence Luk</h1>
       <div class='stripe'></div>
       <p>
-        <span>UC San Diego Computer Science graduate.</span>
-        <span>Software Engineer at <a href='https://www.poynt.com' target='_blank'>Poynt</a>.</span>
+        <span>Technical Program Manager at <a href='https://www.uber.com/' target='_blank'>Uber</a>.</span>
+        <span>Formerly <a href='https://www.poynt.com/' target='_blank'>Poynt</a>, UC San Diego.</span>
       </p>
       <div class='landing-actions'>
         <a class='landing-action' href='/blog'>
@@ -36,8 +34,8 @@
       </div>
     </div>
     <div class='landing-mobile-pattern'></div>
-    <div class='landing-foot-l'>Video filmed in NYC.</div>
-    <div class='landing-foot-r'>© 2017</div>
+    <div class='landing-foot-l'>Based in San Francisco, CA.</div>
+    <div class='landing-foot-r'>© 2018</div>
     </div>
   </div>
 </main>
