--- a/page-blog.hbs
+++ b/page-blog.hbs
@@ -18,7 +18,7 @@
             <a href={{url}}>
               <article class='blog-post in-view'>
                 <div class='blog-post-image-wrapper'>
-                  <img class='kg-image' src='{{img_url feature_image absolute="true"}}'/>
+                  <img src='{{img_url feature_image absolute="true"}}'/>
                 </div>
                 <div class='blog-post-info'>
                   <h2>{{title}}</h2>
