--- a/assets/css/blog.styl
+++ b/assets/css/blog.styl
@@ -63,7 +63,7 @@
     > img
       box-shadow 1px 1px 4px rgba(0,0,8,.24)
       max-width 100%
-      transform rotateX(3deg) translateY($unit*2)
+      transform rotateX(3deg) translateY($grid)
       transition 0.8s ease
       opacity 0.2
 
@@ -104,11 +104,11 @@
     transform translate(0)
 
   12%
-    transform translate(3px, 1px)
+    transform translate(4px, 2px)
 
-  20%
-    transform translate(-3px, -1px)
+  18%
+    transform translate(-4px, -2px)
 
-  24%
+  22%
     transform translate(0)
 
