--- a/index.hbs
+++ b/index.hbs
@@ -41,12 +41,12 @@
           <strong>Technical Program Manager</strong>
           Delivering on strategic, technical, and external programs across Product Engineering organizations. Stints with Driver, Rider, U4B, and Uber Eats.
           <br/>Most recently shipped the <a href='https://techcrunch.com/2020/07/07/uber-grocery-delivery-launches-in-latin-america-and-canada-us-to-follow-later-this-month/' target='_blank'>Cornershop integration</a>.
-          <em>Skills: communication, stakeholder alignment, product strategy, execution</em>
+          <em>Skills: stakeholder alignment & comms, product strategy, execution & timeline ownership</em>
         </p>
         <p style='--y: "2016"'>
           <img src='https://s3-us-west-2.amazonaws.com/lawluk/images/logos/poynt.png' width='110' title='Poynt' /><br /> 
           <strong>Senior Software Engineer</strong>
-          Built apps and tools for merchants, resellers, developers, and other customers of the Poynt payments ecosystem, usually from 0-1.
+          Built apps and tools for merchants, resellers, developers, and other customers of the Poynt payments ecosystem, usually from zero to one.
           <em>Skills: web engineering, product development, rapid iteration, culture champion</em>
         </p>
         <p style='--y: "2015"'>
