--- a/assets/css/landing.styl
+++ b/assets/css/landing.styl
@@ -86,7 +86,6 @@
           border-top 3px solid
           border-image linear-gradient(to right, $purple 0%, $blue 100%)
           border-image-slice 1
-          border-width 3px
           margin 0
           padding $grid*2
           position relative
@@ -101,6 +100,7 @@
             font-style italic
             line-height 1.15em
             display block
+            margin-top $unit
           
           &:before {
             background-color: $grey1;
@@ -166,7 +166,8 @@
   &-actions
     display flex
     justify-content space-between
-    width $grid*20
+    max-width $grid*20
+    width 80vw
     padding-top $grid
     perspective 1080px
 
@@ -231,6 +232,7 @@
       
       .video-wrapper
         height $grid*20
+        width 100%
         
         > video
           width auto
